objects/Partner_Specialization__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Partner Qualification end date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <description>Partner BE GEO name</description>
        <label>Partner Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Certification &amp; Specializations</relationshipLabel>
        <relationshipName>Partner_Specializations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>QUAL_CD__c</fullName>
        <description>Qualification Code pulled in from PGTMV. Partner authorisation, specialisation description</description>
        <label>QUAL CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUAL_UN_ID__c</fullName>
        <description>Partner authorisation, specialisation unique ID</description>
        <externalId>true</externalId>
        <label>QUAL_UN_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>Indicates whether it is a specialisation or authorisation</description>
        <label>Qualification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Partner Qualification start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates if qualification is Active or Inactive for the partner</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customHelpPage>HelpPartnerSpecialization</customHelpPage>
    <description>This object will be used to store partner certifications, specializations and authorizations.</description>
    <label>Partner Specialization</label>
    <nameField>
        <label>Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Specializations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>